--- a/package.json
+++ b/package.json
@@ -3,16 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.2",
+    "@mui/styles": "^5.0.1",
+    "@mui/x-data-grid": "^4.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.22.0",
+    "chart.js": "^3.5.1",
+    "concurrently": "^6.3.0",
+    "json-server": "^0.16.3",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "tsparticles": "^1.35.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "json-server": "json-server --watch src/Database/db.json --port 8000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
