--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "chart.js": "^3.5.1",
-    "concurrently": "^6.3.0",
+    "concurrently": "^6.4.0",
     "json-server": "^0.16.3",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
@@ -26,7 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "json-server": "json-server --watch src/Database/db.json --port 8000",
+    "json-server": "json-server --watch db.json --host 127.0.0.1 --port 8000",
+    "dev":"concurrently \"npm start\" \"npm run json-server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
