--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hospital-mng",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
@@ -28,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "json-server": "json-server --watch db.json --host 127.0.0.1 --port 8000",
-    "dev":"concurrently \"npm start\" \"npm run json-server\"",
+    "dev": "concurrently \"npm start\" \"npm run json-server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
